// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PillTag snapshot href 1`] = `
<a
  class="component anchor"
  href="https://google.com"
>
  anchor tag with href
</a>
`;

exports[`PillTag snapshot interactive 1`] = `
<span
  class="component anchor"
>
  I'm interactive like an anchor!
</span>
`;

exports[`PillTag snapshot plain 1`] = `
<span
  class="component"
>
  plain
</span>
`;
